@@ -25,6 +25,8 @@
 #include "Defn.h"
 #include "Fileio.h"
 
+#include "system.h"
+
 #include "terminal.h"
 #include "gtkconsole.h"
 
